# nexusleads

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER_LINKEDIN_GUIDE.md  FRONTEND_IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  SETUP_GUIDE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  plg_sourcer.py  plg_sourcer.spec  pyproject.toml
.githooks/: pre-commit
assistant/: Dockerfile  codex-bridge.js  package-lock.json  package.json  server.js  start-ec2.sh  start-local.sh
backend/: .env.example  Dockerfile  auth.py  codex_bridge.py  config.py  database.py  main.py  models.py  org_context.py  requirements.txt  schemas.py  settings_service.py
database/: schema.sql
docs/: ai-chat-starter-guide.md  chat-architecture.md  chat-performance-design.md  hiring-philosophy.docx  hiring-philosophy.md  interview-loop-proposal.docx  interview-loop-proposal.md  interview-problem-pool.docx  interview-problem-pool.md  interview-scorecard-template.docx  interview-scorecard-template.md  python-launcher-deploy.md  windsurf-git-workflow.md
features/: 001-billing-metering.md  002-clay-integration.md  003-integrations-hub.md  004-community-generalization.md  005-community-connectors.md  006-dynamic-classification.md  007-information-architecture-migration.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
jobs/: .env.example  Dockerfile  billing_service.py  config.py  database.py  job_processor.py  models.py  requirements.txt  settings_service.py
nginx/: nginx.conf
scripts/: build_binary.sh
(+87 files in other folders)
